--- a/build_webpage/index.html
+++ b/build_webpage/index.html
@@ -10,14 +10,14 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 	<!--my CSS -->
-	<link href="css/campsites.css" rel="stylesheet">
+	<link href="campsites.css" rel="stylesheet">
 
 	<!--load all Font Awesome styles -->
-	<link href="fontawesome-free-5.15.4/css/all.min.css" rel="stylesheet">
+	<link href="fontawesome/css/all.min.css" rel="stylesheet">
 
-	<!--Leaflet integrity="sha256-SmNGWusqL/quKm2d54JB3Czw54vO38NvLHGMNImsOLM=" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="-->
-	<link rel="stylesheet" href="leaflet/leaflet.css" />
-    <script src="leaflet/leaflet.js" ></script>
+	<!--Leaflet -->
+	<link rel="stylesheet" href="leaflet/leaflet.css" integrity="sha256-SmNGWusqL/quKm2d54JB3Czw54vO38NvLHGMNImsOLM="/>
+    <script src="leaflet/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="></script>
 
 	<!--Leaflet.extra-markers -->
 	<link rel="stylesheet" href="leaflet-extra-markers/css/leaflet.extra-markers.min.css">
