--- a/build_webpage/index.html
+++ b/build_webpage/index.html
@@ -10,14 +10,14 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 	<!--my CSS -->
-	<link href="campsites.css" rel="stylesheet">
+	<link rel="stylesheet" href="campsites.css" integrity="sha384-rrVD4ErZxn5xUSPQJk9ycgzOmVXLC4wXqn5iDz67eaUbNHpSgSO7DK37BpQ2dPOu">
 
 	<!--load all Font Awesome styles -->
 	<link href="fontawesome/css/all.min.css" rel="stylesheet">
 
 	<!--Leaflet -->
-	<link rel="stylesheet" href="leaflet/leaflet.css" integrity="sha256-SmNGWusqL/quKm2d54JB3Czw54vO38NvLHGMNImsOLM="/>
-    <script src="leaflet/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="></script>
+	<link rel="stylesheet" href="leaflet/leaflet.css" integrity="sha384-sHL9NAb7lN7rfvG5lfHpm643Xkcjzp4jFvuavGOndn6pjVqS6ny56CAt3nsEVT4H"/>
+    <script src="leaflet/leaflet.js" integrity="sha384-cxOPjt7s7Iz04uaHJceBmS+qpjv2JkIHNVcuOrM+YHwZOmJGBXI00mdUXEq65HTH"></script>
 
 	<!--Leaflet.extra-markers -->
 	<link rel="stylesheet" href="leaflet-extra-markers/css/leaflet.extra-markers.min.css">
